force-app/main/default/objects/Study_Requirement_Set__c/Study_Requirement_Set__c.object-meta.xml
<CustomObject>
    <description>The group of requirement or checklist configuration.</description>
    <label>Study Requirement Set</label>
    <nameField>
        <label>Study Requirement Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Requirement Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>