force-app/main/default/objects/Study_Requirement_Set__c/fields/Completion_Indicator_Admin__c.field-meta.xml
<CustomField>
    <fullName>Completion_Indicator_Admin__c</fullName>
    <description>The field name of the indicator field in the parent object to show the completion of the requirements (admin perspective). The indicator field given should be a checkbox field.</description>
    <inlineHelpText>The field name of the indicator field in the parent object to show the completion of the requirements (admin perspective). The indicator field given should be a checkbox field.</inlineHelpText>
    <label>Completion Indicator (Admin)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>