force-app/main/default/objects/Study_Requirement_Set__c/fields/Contact_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Field__c</fullName>
    <description>Contact field API name of the target object.</description>
    <inlineHelpText>Contact field API name of the target object.</inlineHelpText>
    <label>Contact Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>