force-app/main/default/objects/Study_Requirement_Set__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>The matching criteria logic to create the individual requirement set on the target object record.</description>
    <label>Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>