force-app/main/default/objects/Study_Requirement_Set__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Details or description.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>