force-app/main/default/objects/Study_Requirement_Set__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Object API name of the target object.</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>