force-app/main/default/objects/Study_Requirement_Set__c/validationRules/Required_Object.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Object</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Object__c)</errorConditionFormula>
    <errorDisplayField>Object__c</errorDisplayField>
    <errorMessage>Please provide the parent object of the Study Requirement Set.</errorMessage>
</ValidationRule>