force-app/main/default/objects/Study_Requirement_Set__c/validationRules/Validate_Criteria.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Criteria</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     ISPICKVAL(Requirement_Generation_Mode__c, "Auto"),
     ISBLANK(Criteria__c)
)</errorConditionFormula>
    <errorDisplayField>Criteria__c</errorDisplayField>
    <errorMessage>Criteria is required if the Requirement Generation Mode is Auto.</errorMessage>
</ValidationRule>